--- a/index.css
+++ b/index.css
@@ -95,20 +95,21 @@ button:focus {
 .primary-nav {
     list-style: none;
     padding: 0;
-    margin: 0;
-    background: hsl(0 0% 0% / 0.5);
+    margin: 0; 
+    mask-image: linear-gradient(to right, transparent, black 10%);
 }
 
 /* for browser support check */
 @supports (backdrop-filter: blur(1rem)){
     .primary-nav {
-        background: hsl(0 0% 100% / 0.1);
+        background: linear-gradient(to left, hsl(0 0% 0% / 0.5) 50%, transparent 100%);
         backdrop-filter: blur(1rem);
     }
 }
 
 .primary-nav a {
     text-decoration: none;
+    padding-left: 30px;
     font-family: "Orbitron", sans-serif;
     color: white;
     cursor: url(images/spaceship.png), auto;
